k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-https 
  name: go-https
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-https
  template:
    metadata:
      labels:
        app: go-https
    spec:
      containers:
        - image: quay.io/openshift-pipeline/vote-ui:latest
          imagePullPolicy: Always
          name: go-https
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
