k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: go-https-route
  name: go-https-route
spec:
  port:
    targetPort: 8443-tcp
  to:
    kind: Service
    name: go-https-svc
    weight: 100
  tls:
    termination: passthrough
